--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <!-- update the icon of my website title -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="icon" type="image/svg+xml" href="./src/assets/s.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Saad Hussain</title>
 </head>
